<resources>
    <string name="app_name">JBookWatcher</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_button">Cancel</string>
    <string name="update_button">Update</string>
    <string name="set_button">Set</string>
    <string name="set_new_page_goal">Enter new page goal</string>
    <string name="cancel">Cancel</string>
    <string name="set">set</string>
    <string name="no_goal_text">No current daily page goal.\n Set one to get started!</string>
    <string name="goal_start_set">Read 0 out of %1d pages today. Get reading!</string>
    <string name="goal_progress_set">Read %1d out of %1d pages today. Keep going!</string>
    <string name="goal_progress_done">Read %1d out of %1d pages today. Great job!</string>
    <string name="pages_read_today">Pages read today</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="to_read">To Read</string>
    <string name="finished_reading">Finished Reading</string>
    <string name="empty_list">This list is currently empty</string>
    <string name="enter_book_info">Enter book information</string>
    <string name="book_title">Book Title</string>
    <string name="date_started">Select Date Started</string>
    <string name="page_count">Page Count</string>
    <string name="reselect">Reselect</string>
    <string name="all_fields_except_book_title_are_optional">*Title and Author mandatory fields*</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="start_date">Start Date</string>
    <string name="book_author">Book Author</string>
    <string name="move">Move</string>
    <string name="your_to_read_list_is_currently_empty">Your To Read list is empty</string>
    <string name="your_currently_reading_list_is_empty">Your Currently Reading list is empty</string>
    <string name="end_date">Finish Date</string>
    <string name="your_finished_reading_list_is_empty">Your Finished Reading list is empty</string>
    <string name="no_titleauth">No title/author entered</string>
    <string name="book_in_db">Book already exists in one of your lists</string>
    <string name="add_title">Choose List to Add to</string>
    <string name="search">Search</string>
    <string name="search_start">Add books to your lists here. Search to get started!</string>
    <string name="no_book_results">No book results. Try again.</string>
    <string name="add_to_list">Add to list</string>
    <string name="this_book_is_already_in_one_of_your_lists">This book is already in one of your lists</string>
    <string name="no_pub_year_info">No publish year information</string>
    <string name="no_page_count_info">No page count information</string>
    <string name="add">Add</string>
    <string name="details">Details</string>
    <string name="rating">Rating:</string>

</resources>
