<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:fontFamily="sans-serif"
        android:hint="@string/book_title"
        android:id="@+id/edit_text_book_title_finished" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/book_author"
        android:id="@+id/edit_text_author_finished"
        app:layout_constraintTop_toBottomOf="@id/edit_text_book_title_finished"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        />

    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif"
        android:hint="@string/page_count"
        android:id="@+id/edit_text_book_pages_finished"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_author_finished"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:inputType="number"
        android:imeOptions="actionDone"
        />

    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif"
        android:hint="@string/start_date"
        android:id="@+id/edit_text_finished_read_start_date"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_book_pages_finished"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:focusable="false"
        />

    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif"
        android:hint="@string/end_date"
        android:id="@+id/edit_text_finished_read_finish_date"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_finished_read_start_date"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/all_fields_except_book_title_are_optional"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_finished_read_finish_date"
        app:layout_constraintVertical_bias="0.045" />


</android.support.constraint.ConstraintLayout>