<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalFragment"
    android:id="@+id/cl">

    <Button
        android:text="@string/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_goal_button"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/goal_text" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.6"/>
    <Button
        android:text="@string/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/update_goal_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/goal_text" android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.6"/>
    <TextView
        android:text="@string/no_goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goal_text" android:layout_marginTop="8dp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.4"/>
    <Button
        android:text="@string/set_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_goal_button"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/goal_text"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toEndOf="@+id/cancel_goal_button" android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/update_goal_button" android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.6"/>

</android.support.constraint.ConstraintLayout>